<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lisboo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_string">Your Books</string>
    <string name="hint_string">Enter title</string>
    <string name="hint_string_rate" tools:ignore="TypographyDashes">Enter rate</string>
    <string name="hint_string_date">Enter finish date (dd/mm/yyyy)</string>
    <string name="add_button">SAVE</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="update_button_string">update</string>
    <string name="delete_string">delete</string>
    <string name="details_string">Your Details</string>
    <string name="edit_text_book_details_string">Enter details about the book</string>
    <string name="hint_date_string">Click to select date</string>
    <string name="hint_details_string">Enter your description</string>
    <string name="hint_title_string">Enter your title</string>
</resources>