<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UpdateFragment"
    android:background="@drawable/gradient_background"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_text_book_name_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:backgroundTint="@color/orange_main"
        android:textColor="@color/orange_main"
        android:hint="@string/hint_string"
        android:textColorHint="@color/orange_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_text_book_score_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:backgroundTint="@color/orange_main"
        android:textColor="@color/orange_main"
        android:hint="@string/hint_string_rate"
        android:maxLength="2"
        android:textColorHint="@color/orange_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_book_name_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_text_book_date_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:backgroundTint="@color/orange_main"
        android:textColor="@color/orange_main"
        android:hint="@string/hint_string_date"
        android:maxLength="10"
        android:textColorHint="@color/orange_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_book_score_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_book_date_update"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/update_button_string"
            android:textColor="@color/black"
            android:textStyle="bold|italic">

        </Button>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_string"
            android:textStyle="bold|italic"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/orange_main"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_string"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/red_status"
        app:layout_constraintTop_toBottomOf="@id/linear_layout">

    </com.google.android.material.button.MaterialButton>



</androidx.constraintlayout.widget.ConstraintLayout>