<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment"
    android:background="@drawable/gradient_background"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_Layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:hint="@string/hint_title_string"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:endIconMode="clear_text"
        app:endIconTint="@color/orange_main"
        app:helperText="required*"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:boxStrokeWidth="3dp"
        app:startIconTint="@color/orange_main"
        app:startIconDrawable="@drawable/ic_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_Layout_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_string_rate"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:endIconTint="@color/orange_main"
        app:helperText="required* (1-5)"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:boxStrokeWidth="3dp"
        app:startIconTint="@color/orange_main"
        app:startIconDrawable="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_Layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_book_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:maxLength="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_Layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/white"
        android:hint="@string/hint_date_string"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:endIconTint="@color/orange_main"
        app:helperText="required* (dd/mm/yy)"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:boxStrokeWidth="3dp"
        app:startIconTint="@color/orange_main"
        app:startIconDrawable="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_Layout_rate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_book_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:maxLength="10"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_Layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_details_string"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:endIconTint="@color/orange_main"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:counterTextColor="@android:color/darker_gray"
        app:helperText="required*"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:boxStrokeWidth="3dp"
        app:startIconTint="@color/orange_main"
        app:startIconDrawable="@drawable/ic_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_Layout_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_book_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white"
            android:maxLength="101"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_Layout_details"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/add_button"
            android:textColor="@color/black"
            android:textStyle="bold|italic">

        </Button>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_string"
            android:textStyle="bold|italic"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/orange_main"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>